# frames

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt  ruff.toml
src/: main.py
src/exception/: custom.py
src/logs/: config.py  schemas.py
src/schemas/excel/: args.py  input.py
src/schemas/frames_common/: input.py
src/schemas/frames_one_fold/: input.py
src/scripts/: convert.py
src/services/: excel.py  frames_base.py  frames_one_fold.py  start_limiter.py
src/services/base/: service.py
src/services/excel/: exceptions.py  service.py  types.py
src/services/excel/schemas/: input.py
src/services/frames/: exception.py  ezdxf.py  frames_base.py  frames_one_fold.py
src/services/frames/schemas/: types.py
src/services/frames/schemas/frames_common/: enums.py  input.py
src/services/frames/schemas/frames_one_fold/: input.py  internal.py
src/services/start_limiter/: exception.py  service.py
tests/src_/services/frames_base/test_cases/: t_cases.py
tests/src_/services/frames_base/tests/: test_.py
